# trinoq

./: .gitignore  README.md  pyproject.toml  trinoq.py
